$   An acknowledge did not clear the keypad from the screen. $   New active alarm messages do not display the keypad. Messages     appear at the top of browser window to indicate alarms, but     no keypad appears. $   An acknowledge event DOES show the keypad. Acknowledge alarm     messages should not make the keypad display. $   Textual changes:     When a user's code is accepted make the popup message say     "Keycode accepted; access granted." instead of     "your code was accepted". $   Camera event history. See attached screen capture. On the deck choose     event history. There are 2 options for sorting the data named "Sort $   Camera lift icon bar option for all lifts fails to deliver an error message     to the user that the entire request was not completed. See attached screen     captures. $   Event view icon bar menu item. See attached screen capture. Only show the     option for Open or Close based on whether the event log is open or closed.     Likewise, the drone view has only one option, but the text should toggle     whether the view is open or closed.     In short, these two menu items toggle the visibility of these windows. $   login form resoulution issue

--- a/CMSS/src/pages/Dashboard/DashboardAlphaPage/DashboardAlpha/CameraEventView/style.scss
+++ b/CMSS/src/pages/Dashboard/DashboardAlphaPage/DashboardAlpha/CameraEventView/style.scss
@@ -106,6 +106,9 @@
         width: 10px;
       }
     }
+    .sortright {
+      width: 50%;
+    }
     .selected {
       color: rgba(0,237,255,1);
       .sortType {
